# OS

./: CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake
html/: annotated.html  class_buffered_file_input_stream_reader-members.html  class_buffered_file_input_stream_reader.html  class_buffered_file_input_stream_reader__coll__graph.map  class_buffered_file_input_stream_reader__coll__graph.md5  class_checker-members.html  class_checker.html  class_file_input_stream_reader-members.html  class_file_input_stream_reader.html  class_file_input_stream_reader__inherit__graph.map  class_file_input_stream_reader__inherit__graph.md5  class_input_stream_reader-members.html  class_input_stream_reader.html  class_input_stream_reader__inherit__graph.map  class_input_stream_reader__inherit__graph.md5  class_string_input_stream_reader-members.html  class_string_input_stream_reader.html  class_string_input_stream_reader__coll__graph.md5  class_string_input_stream_reader__inherit__graph.map  class_validator-members.html  class_validator.html  classes.html  classget_answer-members.html  classget_answer.html  classpattern-members.html  classpattern.html  classrandom__t-members.html  classrandom__t.html  dir_0b5d511bbd66f9054fc49ef7b4855266.html  dir_0f502c4c4927271343c2f1dd4f8fef96.html  dir_11339c23a81bc1af9f86d6012e150a8e.html  dir_1bcb1c2f050cfc533983813867009fe8.html  dir_2d3d26aeb21eb6eb9740352d7e4d6e04.html  dir_2fb59a7a3851686deaa9c7c3af47b815.html  dir_5356a27b88ea9f19a023bcc20b0402dc.html  dir_5a224434cfdefdfe1d375d34b087d167.html  dir_5f2d89cded0ab8d9c905c6a91a9a76f3.html  dir_624e4f2dd558eec62d686b645ed1a08e.html  dir_64966302bbea0a6c577fe57e58cad616.html  dir_7697b0ef1b9b6f542c06fd113d2e9a0e.html  (+66 more)
ihw-1/: CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  testlib.h
ihw-1/doc/: CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake
ihw-1/solve/: CMakeLists.txt  err_msg.h  io.h  io_runner.cpp  io_runner.out  jury_answer.cpp  main.c  main.cpp  participant_answer.cpp  process_runner.out  process_work.h
ihw-1/test/: CMakeLists.txt  CTestTestfile.cmake  Makefile  check.cpp  cmake_install.cmake  gen.cpp  generate_test.h  jury_answer.cpp  read_from_file.h  save_to_file.h
ihw-1/test/tests/: input0.txt  input1.txt  input10.txt  input11.txt  input12.txt  input13.txt  input14.txt  input15.txt  input16.txt  input17.txt  input18.txt  input19.txt  input2.txt  input20.txt  input21.txt  input22.txt  input23.txt  input24.txt  input25.txt  input26.txt  input27.txt  input28.txt  input29.txt  input3.txt  input30.txt  input31.txt  input32.txt  input33.txt  input34.txt  input35.txt  input36.txt  input37.txt  input38.txt  input39.txt  input4.txt  input40.txt  input41.txt  input42.txt  input43.txt  input44.txt  (+57 more)
ihw-2/: CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake
ihw-3/: CTestTestfile.cmake  Makefile  cmake_install.cmake
ihw-4/: CTestTestfile.cmake  Makefile  cmake_install.cmake
latex/: annotated.tex  class_buffered_file_input_stream_reader.tex  class_buffered_file_input_stream_reader__inherit__graph.md5  class_checker.tex  class_validator.tex  (+29 more)
(+35 files in other folders)
